# Astation

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEPLOY.md  Package.swift  README.md
.github/workflows/: ci.yml  deploy-relay-staging.yml  release.yml
Sources/CStationCore/: shim.c
Sources/CStationCore/include/: astation_core.h  astation_screen_capture.h  module.modulemap
Sources/Menubar/: AccessToken2.swift  AgoraAPIClient.swift  AstationApp.swift  AstationHubManager.swift  AstationIdentity.swift  AstationMessage.swift  AstationWebSocketServer.swift  AuthGrantController.swift  ConnectionsView.swift  ConnectionsWindowController.swift  ConvoAIClient.swift  CredentialManager.swift  DevConsoleController.swift  HotkeyManager.swift  JoinChannelWindowController.swift  Log.swift  MachineIdentity.swift  NetworkDebugLogger.swift  NetworkMonitor.swift  ProjectsWindowController.swift  RTCManager.swift  ScreenRegionSelector.swift  SessionLinkManager.swift  SessionStore.swift  SettingsWindowController.swift  StatusBarController.swift  TimeSync.swift  VoiceCodingHUD.swift  VoiceCodingManager.swift  main.swift
Tests/AstationTests/: AccessToken2Tests.swift  AgoraAPIClientTests.swift  AuthGrantRelayTests.swift  RTCTokenGenerationTests.swift  SessionLinkManagerTests.swift  TimeSyncTests.swift  VoiceCodingTests.swift
api-server/src/: rtc_session.rs
core/include/: astation_rtc.h  astation_screen_capture.h  astation_token.h
core/src/: astation_core.cpp  astation_rtc.cpp  astation_screen_capture.cpp  astation_token.cpp
core/tests/: screen_capture_selection_test.cpp  session_manager_test.cpp  token_builder_test.cpp
relay-server/: .env.example  .env.staging  COOLIFY.md  Cargo.toml  Dockerfile  QUICK-DEPLOY.md  README.md  RELAY_SESSION_TODO.md  SECURITY.md  STAGING-SETUP.md  docker-compose.dev.yml  docker-compose.yml
relay-server/src/: auth.rs  llm_proxy.rs  main.rs  relay.rs  routes.rs  rtc_session.rs  session_verify.rs  voice_routes.rs  voice_session.rs
relay-server/src/web/: auth_page.rs  mod.rs
scripts/: smoke_screen_share.sh
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: main.rs  relay.rs  routes.rs  session_store.rs
server/src/web/: auth_page.rs
webapp/: Dockerfile  TESTING.md  docker-compose.yml  index.html  nginx.conf
webapp/css/: style.css
webapp/js/: app.js  codec.js
webapp/tests/: codec.test.js
